# ts/apps/docs/openapi/openapi.json
@@ -1285,12 +1285,6 @@
                         "format": "int64",
                         "type": "integer"
                     },
-                    "is_admin": {
-                        "type": "boolean"
-                    },
-                    "is_remote": {
-                        "type": "boolean"
-                    },
                     "pds_sync_status": {
                         "type": "string"
                     },
@@ -1302,7 +1296,6 @@
                 "required": [
                     "id",
                     "handle",
-                    "is_admin",
                     "created_at",
                     "pds_sync_status"
                 ],
@@ -1345,9 +1338,6 @@
                         "type": "string"
                     },
                     "is_following": {
-                        "type": "boolean"
-                    },
-                    "is_remote": {
                         "type": "boolean"
                     },
                     "pds_url": {
